[gd_scene load_steps=4 format=3 uid="uid://d1dws1tcw045m"]

[ext_resource type="Script" uid="uid://cd4s4q812avxv" path="res://src/unit/character/enemy/character_bullet.gd" id="1_of0nw"]
[ext_resource type="PackedScene" uid="uid://ctjmfotnke34v" path="res://src/unit/common/hitbox/hitbox.tscn" id="2_sy7ol"]
[ext_resource type="Script" uid="uid://cp8adijnorm6o" path="res://src/unit/common/particle/particle_queue.gd" id="3_afc85"]

[node name="CharacterBullet" type="CharacterBody2D" groups=["bullet"]]
collision_layer = 0
collision_mask = 257
script = ExtResource("1_of0nw")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource("2_sy7ol")]
collision_layer = 2064
collision_mask = 2048
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ParticlePoint" type="Marker2D" parent="."]

[node name="ParticleQueue" type="Node" parent="."]
script = ExtResource("3_afc85")
metadata/_custom_type_script = "uid://cp8adijnorm6o"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
show_behind_parent = true
position = Vector2(0, -1.90735e-06)
scale = Vector2(12.8, 6.4)
metadata/_edit_lock_ = true

[connection signal="collided" from="Hitbox" to="." method="_on_hitbox_collided"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
